syntax = "proto2";
package etop.vn.api.main.carrier.v1;
option go_package = "v1";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all)                = false;
option (gogoproto.gogoproto_import)         = false;
option (gogoproto.goproto_enum_prefix_all)  = false;
option (gogoproto.goproto_getters_all)      = true;
option (gogoproto.goproto_sizecache_all)    = false;
option (gogoproto.goproto_unkeyed_all)      = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.gostring_all)             = false;
option (gogoproto.marshaler_all)            = false;
option (gogoproto.onlyone_all)              = false;
option (gogoproto.sizer_all)                = false;
option (gogoproto.testgen_all)              = false;
option (gogoproto.unmarshaler_all)          = false;
option (gogoproto.verbose_equal_all)        = false;

import "etop.vn/api/meta/v1/api.proto";
import "etop.vn/api/main/shipping/v1/types/types.proto";
import "etop.vn/api/main/order/v1/types/types.proto";

service CarrierQueryService {
    rpc GetShippingServices(GetShippingServicesQueryArgs) returns (ShippingServicesQueryResult);
}

service CarrierManager {
    rpc CreateExternalShipment(CreateExternalShipmentCommand) returns (ExternalShipmentEvent);

    rpc CancelExternalShipment(CancelExternalShipmentCommand) returns (meta.v1.Empty);
}

message ExternalShipment {
    optional string id = 1 [(gogoproto.nullable)=false];

    optional string code = 2 [(gogoproto.nullable)=false];

    optional string state = 3 [(gogoproto.nullable)=false];

    optional int32 shipping_fee = 4 [(gogoproto.nullable)=false];

    // data

    // logs

}

message ShippingFeeLine {
    optional string type = 1 [(gogoproto.nullable)=false];

    optional int32 fee = 2 [(gogoproto.nullable)=false];

    optional string name = 3 [(gogoproto.nullable)=false];

    optional string service_id = 4 [(gogoproto.nullable)=false];

    optional string service_name = 5 [(gogoproto.nullable)=false];
}

//-- Queries --//

message GetShippingServicesQueryArgs {
    repeated string carriers = 1;

    optional int64 arbitrary_id = 2 [(gogoproto.nullable)=false];
}

message ShippingServicesQueryResult {
    repeated shipping.v1.types.ShippingService services = 1 [(gogoproto.nullable)=false];
}

//-- Commands --//

message CreateExternalShipmentCommand {
    optional string carrier = 1 [(gogoproto.nullable)=false];

    optional string shipping_service_code = 2 [(gogoproto.nullable)=false];

    optional int64 fulfillment_id = 3 [(gogoproto.nullable)=false];

    optional order.v1.types.Address pickup_address = 4 [(gogoproto.nullable)=false];

    optional order.v1.types.Address shipping_address = 5 [(gogoproto.nullable)=false];

    optional order.v1.types.Address return_address = 6 [(gogoproto.nullable)=false];

    optional string shipping_note = 7 [(gogoproto.nullable)=false];
}

message CreateExternalShipmentResponse {
    optional string external_shipment_id = 1 [(gogoproto.nullable)=false];

    optional string external_shipment_code = 2 [(gogoproto.nullable)=false];
}

message CancelExternalShipmentCommand {
    optional int64 fulfillment_id = 1 [(gogoproto.nullable)=false];

    optional string external_shipment_id = 2 [(gogoproto.nullable)=false];
}

//-- Events --//

message ExternalShipmentEvent {
    optional int64 id = 1 [(gogoproto.nullable)=false];

    optional meta.v1.UUID uuid = 2 [(gogoproto.nullable)=false];

    optional meta.v1.UUID correlation_id = 3 [(gogoproto.nullable)=false];

    optional string carrier = 4 [(gogoproto.nullable)=false];

    optional string external_shipment_id = 5 [(gogoproto.nullable)=false];

    optional string external_shipment_code = 6 [(gogoproto.nullable)=false];

    optional int32 type = 10 [(gogoproto.nullable)=false];

    optional EventData data = 11;
}

message EventData {
    oneof data {
        CreationAcceptedData CreationAccepted = 1;
        CreationRejectedData CreationRejected = 2;
        CancellationAcceptedData CancellationAccepted = 3;
        CancellationRejectedData CancellationRejected = 4;

        InfoReceivedData InfoReceived = 10;
    }
}

message CreationAcceptedData {

}

message CreationRejectedData {

}

message CancellationAcceptedData {

}

message CancellationRejectedData {

}

message InfoReceivedData {

}
